# JSONToLinuxOptimizer

./: README.md  commandRouter.py  data.json  patternWriter.py  pyls.py  pyproject.toml  results.xml
testcases/: test_pyls.py
