[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyls"
version = "0.1.0"
description = "A Python implementation of the 'ls' command for a JSON-based directory structure."
authors = [
    { name="Sumanta Samanta", email="sumantasamanta98@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

[project.scripts]
pyls = "pyls.main:main"
